--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "json2csv": "^6.0.0-alpha.2",
-    "jspdf": "^3.0.0",
     "jspdf-autotable": "^3.8.4",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -36,6 +35,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "vite": "^6.1.0"
   }
 }
