--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "json2csv": "^6.0.0-alpha.2",
-    "jspdf-autotable": "^3.8.4",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-data-table-component": "^7.7.0",
     "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "styled-components": "^6.1.15",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
