--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
-    "axios": "^1.7.9",
+    "axios": "^1.8.1",
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "json2csv": "^6.0.0-alpha.2",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-data-table-component": "^7.7.0",
