--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
+    "js-cookie": "^3.0.5",
     "json2csv": "^6.0.0-alpha.2",
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^3.8.4",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
