--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.2.0",
     "styled-components": "^6.1.15",
     "tailwindcss": "^4.0.6"
