--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
+    "js-cookie": "^3.0.5",
     "json2csv": "^6.0.0-alpha.2",
     "moment": "^2.30.1",
     "react": "^19.0.0",
@@ -26,7 +27,8 @@
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.2.0",
     "styled-components": "^6.1.15",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
