--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
     "json2csv": "^6.0.0-alpha.2",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
