--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.2.0",
     "styled-components": "^6.1.15",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
