--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "react-router-dom": "^7.2.0",
     "styled-components": "^6.1.15",
     "tailwindcss": "^4.0.6",
-    "zustand": "^5.0.3",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
