--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tiptap/extension-strike": "^2.11.5",
     "@tiptap/extension-text-align": "^2.11.5",
     "@tiptap/extension-underline": "^2.11.5",
+    "@tiptap/html": "^2.11.5",
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
